# space

./: .clang-format  .gitignore  .gitmodules  .ycm_extra_conf.py  2player.bat  CMakeLists.txt  Dockerfile  LICENSE  affinity.cc  amazon_linux_setup.sh  aws_daily.sh  bash_constants.sh  build.bat  cc_glfw.sh  check_includes.sh  cxx.sh  daily.sh  docker-compose.yaml  docker_build.sh  find.bat  includes.sh  linux_cpu.sh  motivations.txt  run_all_tests.sh  run_constants.bat  run_constants.sh  run_make  run_make_asteroids  run_test.sh  sanitize_test.sh  space.service  tasks.txt
demos/asteroids/: CMakeLists.txt  asteroids.cc  asteroids.h  asteroids_client.cc  asteroids_commands.cc  asteroids_commands.h  asteroids_components.h  asteroids_serialize.cc  asteroids_serialize.h  asteroids_server.cc  asteroids_state.cc  asteroids_state.h  main.cc
ecs/: CMakeLists.txt  components.h  ecs.h  ecs_test.cc  entity.h  internal.h  mock_system.h  system.h  system_test.cc  util.h
example/gfx/: 3d.cc  CMakeLists.txt  bmp_loader.cc  characters.fnt  characters_0.tga  gfx_explore.cc  gfx_ui.cc  gl_colored_triangle.cc  gl_font.cc  gl_line.cc  gl_log.cc  gl_texture.cc  gl_triangle.cc  gl_triangle_translate.cc  gl_version.cc  objtoc.cc  tga_loader.cc  tgatoc.cc
examples/: CMakeLists.txt
examples/ecs/: CMakeLists.txt  main.cc
examples/flags/: CMakeLists.txt  main.cc
examples/fs/: CMakeLists.txt  main.cc
examples/gfx/: CMakeLists.txt  gl_colored_triangle.cc  gl_log.cc  gl_triangle.cc  gl_triangle_translate.cc  gl_version.cc
examples/glfw/: CMakeLists.txt  main.cc
examples/graphics/: CMakeLists.txt
examples/gtest/: CMakeLists.txt
examples/logging/: CMakeLists.txt  main.cc
examples/network/: CMakeLists.txt  network_udp_client.cc
examples/renderer/: CMakeLists.txt  main.cc
examples/sdl/: CMakeLists.txt  main.cc
examples/send_fbs/: CMakeLists.txt  main.cc
examples/send_fbs/fbs/: packet.fbs
examples/socket/: CMakeLists.txt  tcp_client.cc  tcp_server.cc  time_server.cc  udp_client.cc  udp_server.cc  udp_server_toupper.cc  unix_list.cc
examples/stl/: CMakeLists.txt  main.cc
examples/struct/: CMakeLists.txt  main.cc
game/: CMakeLists.txt  event.cc  event.h  event_buffer.cc  event_buffer.h  event_buffer_test.cc  game.cc  game.h  game_test.cc  gl_game.cc  gl_game.h  sdl_game.cc  sdl_game.h
integration/entity_replication/: CMakeLists.txt  entity_replication.cc  entity_replication.h  entity_replication_server.cc  entity_replication_server.h  entity_replication_test.cc
math/: CMakeLists.txt  intersection.cc  intersection.h  intersection_test.cc  mat.h  mat_ops.h  mat_ops_test.cc  mat_test.cc  math_test.cc  quat.h  quat_test.cc  utils.h  vec.h  vec_test.cc
network/: CMakeLists.txt  client.cc  client.h  client_test.cc  message_queue.cc  message_queue.h  network.h  server.cc  server.h  server_test.cc  unix_network.cc  win32_network.cc
network/testdata/: packet.fbs
observer/: CMakeLists.txt  mock_observer.h  observer.h  observer_test.cc  subject.h
renderer/: CMakeLists.txt  gl_shader_cache.cc  gl_shader_cache.h  gl_shader_cache_test.cc  gl_utils.cc  gl_utils.h  glfw_renderer.cc  glfw_renderer.h  renderer.cc  renderer.h  shader_cache.h  shape_verts.h
src/: CMakeLists.txt  asteroids_client.cc  asteroids_server.cc  camera.h  components.h  ecs.h  gfx.cc  gfx.h  space.cc  space_server.cc
src/asset/: asteroid.cc  cone.cc  crew.cc  cube.cc  exhaust.cc  font.cc  gear.cc  pod.cc  sphere.cc
src/asteroids/: asteroids.cc  asteroids.h  asteroids_commands.cc  asteroids_commands.h  asteroids_components.h  asteroids_state.h  ecs.cc  event_buffer_test.cc  game.h
src/common/: array.c  array.cc  array_test.cc  blackboard.c  blackboard.cc  common.c  common.cc  common.h  config.h  constant.h  constants.h  extern.h  extern_list.h  hash.cc  hash_array.cc  log.cc  macro.h  queue.cc  queue_test.cc  typedef.h  util.cc
src/ecs/: common.cc  ecs.h  ecs_test.cc  internal.h  util.h
src/game/: event_buffer.h  event_buffer_test.cc  game.cc  game.h  game_test.cc
src/gfx/: gfx.cc  gfx.h  imui.cc  light.cc
src/gl/: gl_shader_cache.cc  gl_shader_cache.h  gl_utils.cc  gl_utils.h  renderer.cc  shader.cc  shader.h  shader_cache.cc  shader_cache.h  shape_verts.h  utils.cc  utils.h
src/glad/: glad.c  glad_unix.c  glad_unix.h
src/glfw/: glfw.c
src/math/: cube.h  intersection.cc  intersection.h  intersection_test.cc  mat.h  mat_ops.cc  mat_ops.h  mat_ops_test.cc  mat_test.cc  math.cc  quat.h  quat_test.cc  rect.h  stats.cc  stats_test.cc  util.cc  utils.h  vec.h  vec_test.cc
src/network/: client.cc  client.h  client_test.cc  echo_test.cc  network.cc  network.h  playback_test.cc  protocol.cc  server.cc  server.h  server_test.cc  spam_test.cc
src/platform/: affinity.cc  clock_test.c  filesystem.h  intrin_test.cc  linux_affinity.cc  macosx_affinity.cc  macosx_window.mm  macro.h  platform.cc  platform.h  platform_clock.cc  platform_clock_test.cc  platform_getopt.cc  rdtsc.h  thread.h  thread_test.cc  udp.h  udp_logger.cc  udp_server_test.cc  udp_test.cc  unix_affinity.cc  unix_clock.cc  unix_filesystem.cc  unix_sleep.cc  unix_thread.cc  unix_udp.cc  win32_affinity.cc  win32_clock.cc  win32_filesystem.cc  win32_sleep.cc  win32_thread.cc  win32_udp.cc  win32_window.cc  window.cc  window.h  x11_window.cc  x64_intrin.h
src/renderer/: camera.cc  gl_shader_cache.cc  gl_shader_cache.h  gl_shader_cache_test.cc  gl_utils.cc  gl_utils.h  renderer.cc  renderer.h  shader.h  shader_cache.h  shape_verts.h  texture.cc  tga_loader.cc  ui.cc  ui.h
src/search/: search_test.cc
src/ship/: cruiser.cc  ship.cc  shuttle.cc
src/simulation/: ai.cc  asteroid.cc  camera.cc  command.cc  common.cc  entity.cc  entity_registry.cc  entity_test.cc  ftl.cc  interaction.cc  mhitu.cc  module.cc  phitu.cc  queue_test.cc  render.cc  scenario.cc  search.cc  selection.cc  ship.cc  simulation.cc  tile_test.cc  tilemap.cc  tilemap_test.cc  unit.cc  util.cc
src/space/: camera.cc  camera.h  command.cc  ecs.cc  entity.cc  gameplay.cc  gfx.cc  gfx.h  search.cc  tilemap.cc
types/: CMakeLists.txt  main.cc
types/common/: vec3.fbs
(+136 files in other folders)
