add_subdirectory(ecs)
add_subdirectory(flags)
add_subdirectory(fs)
add_subdirectory(gfx)
add_subdirectory(glfw)
add_subdirectory(network)
add_subdirectory(logging)
add_subdirectory(renderer)
add_subdirectory(sdl)
add_subdirectory(send_fbs)
add_subdirectory(socket)
add_subdirectory(stl)
add_subdirectory(gtest)
